k8s/code-server/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: code-server
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - code.h0n9.postie.chat
    port:
      name: http
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true 
  - hosts:
    - code.h0n9.postie.chat
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: code-server-cert
