k8s/code-server/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: code-server 
spec:
  gateways:
  - code-server
  hosts:
  - code.h0n9.postie.chat
  http:
  - route:
    - destination:
        host: code-server.external 
        port:
          number: 8080
      weight: 100
